Fix overflow issue

--- a/app/public/wp-content/themes/blog_theme/css/main.css
+++ b/app/public/wp-content/themes/blog_theme/css/main.css
@@ -8,6 +8,10 @@
 	}
 }
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	margin: 0;
 	background-color: var(--background-light);
